<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCrashed!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="select_numbers">Select Numbers</string>
    <string name="rugged">Rugged</string>
    <string name="highway">Highway</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>

</resources>
